--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -94,7 +94,7 @@ jobs:
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
 
-      #  Upload security reports as artifacts
+# Upload security reports as artifacts
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         with:
@@ -104,7 +104,8 @@ jobs:
             trivy-report.json
             trivy-report.txt
           retention-days: 7
-          
+      
+      # Send build info to Jenkins with full vulnerability details
       - name: Send build info to Jenkins
         if: always()
         env:
@@ -112,23 +113,45 @@ jobs:
           JENKINS_API_TOKEN: ${{ secrets.JENKINS_API_TOKEN }}
         run: |
           echo "Preparing payload for Jenkins..."
-          
-          # Create a compact, valid JSON object
-          TRIVY_JSON=$(jq -c . trivy-report.json)
-          
+      
+          # Read full Trivy JSON report
+          TRIVY_JSON=$(cat trivy-report.json)
+      
+          # Generate human-readable summary (CRITICAL/HIGH/MEDIUM counts)
+          SUMMARY_TEXT=$(jq -r '
+            .Results | map(.Vulnerabilities[]) as $v |
+            "CRITICAL=" + ($v | map(select(.Severity=="CRITICAL")) | length | tostring) +
+            ", HIGH=" + ($v | map(select(.Severity=="HIGH")) | length | tostring) +
+            ", MEDIUM=" + ($v | map(select(.Severity=="MEDIUM")) | length | tostring)
+          ' trivy-report.json)
+      
+          # Build full payload with all details
           PAYLOAD=$(jq -n \
             --arg commit "${{ github.sha }}" \
             --arg branch "${{ github.ref_name }}" \
             --arg repo "${{ github.repository }}" \
             --arg image "${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}" \
-            --argjson trivy "$TRIVY_JSON" \
-            '{commit: $commit, branch: $branch, repo: $repo, image: $image, trivy: $trivy}')
-
-          echo "Final payload:"
+            --arg summary_text "$SUMMARY_TEXT" \
+            --argjson trivy_details "$TRIVY_JSON" \
+            --arg pipeline_status "success" \
+            --arg timestamp "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
+            '{
+              commit: $commit,
+              branch: $branch,
+              repo: $repo,
+              image: $image,
+              summary_text: $summary_text,
+              trivy_details: $trivy_details,
+              pipeline_status: $pipeline_status,
+              timestamp: $timestamp
+            }')
+      
+          echo "Final payload to Jenkins:"
           echo "$PAYLOAD" | jq .
-
+      
+          # Send payload to Jenkins webhook
           curl -v -X POST "https://accusatorial-unslighted-merlin.ngrok-free.dev/generic-webhook-trigger/invoke?token=github-ci-token" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD"
-
-
+      
+      
